--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="nav-right">
+                <li><a href="">Gmail</a></li>
+                <li><a href="">Image</a></li>
+                <li><a href="">Icon</a></li>
+                <li><a href="">Photo</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
